--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   "devDependencies": {
     "code": "^1.4.1",
     "lab": "^5.13.0",
-    "precommit-hook": "^3.0.0",
+    "pre-commit": "^1.1.1",
     "standard": "^4.5.2"
   },
   "dependencies": {
