--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ipfs-peer-id",
-  "version": "0.3.1",
+  "version": "0.3.2",
   "description": "IPFS Peer Id implementation in Node.js",
   "main": "src/index.js",
   "scripts": {
@@ -17,7 +17,9 @@
     "codestyle",
     "test"
   ],
-  "engines" : { "node" : "^4.0.0" },
+  "engines": {
+    "node": "^4.0.0"
+  },
   "bugs": {
     "url": "https://github.com/diasdavid/node-ipfs-peer-id/issues"
   },
