--- a/package.json
+++ b/package.json
@@ -4,11 +4,8 @@
   "description": "IPFS Peer Id implementation in Node.js",
   "main": "src/index.js",
   "scripts": {
-    "test": "./node_modules/.bin/lab tests/*-test.js",
-    "coverage": "./node_modules/.bin/lab -t 100 tests/*-test.js",
-    "codestyle": "./node_modules/.bin/standard --format",
-    "lint": "jshint .",
-    "validate": "npm ls"
+    "test": "node tests/*-test.js",
+    "lint": "standard"
   },
   "keywords": [
     "IPFS"
@@ -16,24 +13,25 @@
   "author": "David Dias <daviddias@ipfs.io>",
   "license": "MIT",
   "pre-commit": [
-    "codestyle",
+    "lint",
     "test"
   ],
   "engines": {
-    "node": "^4.0.0"
+    "node": "^4.2.0"
   },
   "bugs": {
     "url": "https://github.com/diasdavid/node-peer-id/issues"
   },
   "homepage": "https://github.com/diasdavid/node-peer-id",
   "devDependencies": {
-    "code": "^1.4.1",
-    "lab": "^5.13.0",
     "pre-commit": "^1.1.1",
-    "standard": "^4.5.2"
+    "standard": "^5.3.1",
+    "tape": "^4.2.2",
+    "zuul": "^3.7.2"
   },
   "dependencies": {
-    "bs58": "^2.0.1",
-    "multihashing": "^0.1.3"
+    "bs58": "^3.0.0",
+    "keypair": "^1.0.0",
+    "multihashing": "^0.2.0"
   }
 }
