--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "peer-id",
-  "version": "0.3.4",
+  "version": "0.4.0",
   "description": "IPFS Peer Id implementation in Node.js",
   "main": "src/index.js",
   "scripts": {
@@ -41,6 +41,7 @@
   "dependencies": {
     "bs58": "^3.0.0",
     "keypair": "^1.0.0",
-    "multihashing": "^0.2.0"
+    "multihashing": "^0.2.0",
+    "node-forge": "^0.6.38"
   }
 }
