--- a/package.json
+++ b/package.json
@@ -40,8 +40,8 @@
   },
   "dependencies": {
     "bs58": "^3.0.0",
-    "keypair": "^1.0.0",
     "multihashing": "^0.2.0",
-    "node-forge": "^0.6.38"
+    "node-forge": "^0.6.38",
+    "protocol-buffers": "^3.1.4"
   }
 }
