--- a/package.json
+++ b/package.json
@@ -33,9 +33,18 @@
   },
   "homepage": "https://github.com/diasdavid/js-peer-id",
   "devDependencies": {
+    "karma": "^0.13.19",
+    "karma-chrome-launcher": "^0.2.2",
+    "karma-cli": "^0.1.2",
+    "karma-firefox-launcher": "^0.1.7",
+    "karma-mocha": "^0.2.1",
+    "karma-spec-reporter": "0.0.24",
+    "karma-webpack": "^1.7.0",
+    "mocha": "^2.4.5",
     "pre-commit": "^1.1.1",
     "standard": "^5.3.1",
     "tape": "^4.2.2",
+    "webpack": "^1.12.13",
     "zuul": "^3.7.2"
   },
   "dependencies": {
