--- a/package.json
+++ b/package.json
@@ -4,12 +4,10 @@
   "description": "IPFS Peer Id implementation in Node.js",
   "main": "src/index.js",
   "scripts": {
-    "test:node": "node tests/*-test.js",
+    "test:node": "mocha tests/test.js",
     "lint": "standard",
-    "test": "npm run test:node",
-    "test:browser": "./node_modules/.bin/zuul --browser-version $BROWSER_VERSION --browser-name $BROWSER_NAME -- tests/id-test.js",
-    "test:browser:q": "BROWSER_VERSION=46 BROWSER_NAME=chrome npm run test:browser",
-    "build": "./node_modules/.bin/browserify -s PeerId -e ./src/index.js | tee dist/peer-id.js | ./node_modules/.bin/uglifyjs -m > dist/peer-id.min.js"
+    "test": "npm run test:node && npm run test:browser",
+    "test:browser": "karma start karma.conf.js"
   },
   "keywords": [
     "IPFS"
@@ -33,6 +31,9 @@
   },
   "homepage": "https://github.com/diasdavid/js-peer-id",
   "devDependencies": {
+    "buffer-loader": "0.0.1",
+    "chai": "^3.5.0",
+    "json-loader": "^0.5.4",
     "karma": "^0.13.19",
     "karma-chrome-launcher": "^0.2.2",
     "karma-cli": "^0.1.2",
