--- a/.travis.yml
+++ b/.travis.yml
@@ -9,5 +9,13 @@ branches:
 before_install:
   - npm i -g npm
   # Workaround for a permissions issue with Travis virtual machine images
+
+addons:
+  firefox: 'latest'
+
+before_script:
+  - export DISPLAY=:99.0
+  - sh -e /etc/init.d/xvfb start
+
 script:
   - npm test
