--- a/package.json
+++ b/package.json
@@ -44,9 +44,7 @@
     "mocha": "^2.4.5",
     "pre-commit": "^1.1.1",
     "standard": "^5.3.1",
-    "tape": "^4.2.2",
-    "webpack": "^1.12.13",
-    "zuul": "^3.7.2"
+    "webpack": "^1.12.13"
   },
   "dependencies": {
     "bs58": "^3.0.0",
