--- a/package.json
+++ b/package.json
@@ -56,5 +56,9 @@
     "multihashing": "^0.2.0",
     "node-forge": "^0.6.38",
     "protocol-buffers": "^3.1.4"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/diasdavid/js-peer-id.git"
   }
 }
