--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "peer-id",
-  "version": "0.5.1",
+  "version": "0.5.2",
   "description": "IPFS Peer Id implementation in Node.js",
   "main": "src/index.js",
   "scripts": {
@@ -10,6 +10,11 @@
     "test:browser": "karma start karma.conf.js",
     "coverage": "istanbul cover --print both -- _mocha tests/test.js",
     "build": "webpack"
+  },
+  "standard": {
+    "ignore": [
+      "dist"
+    ]
   },
   "keywords": [
     "IPFS"
