--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "main": "lib/index.js",
   "jsnext:main": "src/index.js",
   "scripts": {
-    "lint": "dignified-lint",
-    "build": "dignified-build",
-    "test": "dignified-test",
-    "test:node": "dignified-test node",
-    "test:browser": "dignified-test browser",
-    "release": "dignified-release",
-    "coverage": "dignified-coverage"
+    "lint": "aegir-lint",
+    "build": "aegir-build",
+    "test": "aegir-test",
+    "test:node": "aegir-test node",
+    "test:browser": "aegir-test browser",
+    "release": "aegir-release",
+    "coverage": "aegir-coverage",
+    "coverage-publish": "aegir-coverage publish"
   },
   "keywords": [
     "IPFS"
@@ -30,11 +31,10 @@
   },
   "homepage": "https://github.com/diasdavid/js-peer-id",
   "devDependencies": {
+    "aegir": "^2.1.1",
     "buffer-loader": "0.0.1",
     "chai": "^3.5.0",
-    "dignified.js": "^1.0.0",
-    "istanbul": "^0.4.2",
-    "pre-commit": "^1.1.1"
+    "pre-commit": "^1.1.2"
   },
   "dependencies": {
     "bs58": "^3.0.0",
