--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.6.6",
   "description": "IPFS Peer Id implementation in Node.js",
   "main": "lib/index.js",
+  "bin": "src/bin.js",
   "jsnext:main": "src/index.js",
   "scripts": {
     "lint": "aegir-lint",
