--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "peer-id",
   "version": "0.7.0",
   "description": "IPFS Peer Id implementation in Node.js",
-  "main": "lib/index.js",
+  "main": "src/index.js",
   "bin": "src/bin.js",
   "jsnext:main": "src/index.js",
   "scripts": {
