--- a/package.json
+++ b/package.json
@@ -2,18 +2,18 @@
   "name": "peer-id",
   "version": "0.7.0",
   "description": "IPFS Peer Id implementation in Node.js",
-  "main": "src/index.js",
+  "main": "lib/index.js",
   "bin": "src/bin.js",
   "jsnext:main": "src/index.js",
   "scripts": {
     "lint": "aegir-lint",
     "build": "aegir-build",
-    "test": "aegir-test",
+    "test": "PHANTOM=off aegir-test",
     "test:node": "aegir-test node",
-    "test:browser": "aegir-test browser",
-    "release": "aegir-release",
-    "release-minor": "aegir-release --type minor",
-    "release-major": "aegir-release --type major",
+    "test:browser": "PHANTOM=off aegir-test browser",
+    "release": "PHANTOM=off aegir-release",
+    "release-minor": "PHANTOM=off aegir-release --type minor",
+    "release-major": "PHANTOM=off aegir-release --type major",
     "coverage": "aegir-coverage",
     "coverage-publish": "aegir-coverage publish"
   },
@@ -39,6 +39,7 @@
     "pre-commit": "^1.1.3"
   },
   "dependencies": {
+    "async": "^2.0.1",
     "libp2p-crypto": "^0.6.1",
     "multihashes": "^0.2.2"
   },
