--- a/package.json
+++ b/package.json
@@ -2,18 +2,17 @@
   "name": "peer-id",
   "version": "0.7.0",
   "description": "IPFS Peer Id implementation in Node.js",
-  "main": "lib/index.js",
+  "main": "src/index.js",
   "bin": "src/bin.js",
-  "jsnext:main": "src/index.js",
   "scripts": {
     "lint": "aegir-lint",
     "build": "aegir-build",
-    "test": "PHANTOM=off aegir-test",
+    "test": "aegir-test",
     "test:node": "aegir-test node",
-    "test:browser": "PHANTOM=off aegir-test browser",
-    "release": "PHANTOM=off aegir-release",
-    "release-minor": "PHANTOM=off aegir-release --type minor",
-    "release-major": "PHANTOM=off aegir-release --type major",
+    "test:browser": "aegir-test browser",
+    "release": "aegir-release",
+    "release-minor": "aegir-release --type minor",
+    "release-major": "aegir-release --type major",
     "coverage": "aegir-coverage",
     "coverage-publish": "aegir-coverage publish"
   },
@@ -27,12 +26,12 @@
     "test"
   ],
   "engines": {
-    "node": "^4.3.0"
+    "node": ">=4.0.0"
   },
   "bugs": {
-    "url": "https://github.com/diasdavid/js-peer-id/issues"
+    "url": "https://github.com/libp2p/js-peer-id/issues"
   },
-  "homepage": "https://github.com/diasdavid/js-peer-id",
+  "homepage": "https://github.com/libp2p/js-peer-id",
   "devDependencies": {
     "aegir": "^8.1.2",
     "chai": "^3.5.0",
@@ -45,7 +44,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/diasdavid/js-peer-id.git"
+    "url": "https://github.com/libp2p/js-peer-id.git"
   },
   "contributors": [
     "David Dias <daviddias.p@gmail.com>",
