docs: Add jsdoc api docs

--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "release-minor": "aegir-release --type minor",
     "release-major": "aegir-release --type major",
     "coverage": "aegir-coverage",
-    "coverage-publish": "aegir-coverage publish"
+    "coverage-publish": "aegir-coverage publish",
+    "docs": "aegir-docs"
   },
   "keywords": [
     "IPFS"
