--- a/package.json
+++ b/package.json
@@ -26,21 +26,22 @@
     "test"
   ],
   "engines": {
-    "node": ">=4.0.0"
+    "node": ">=4.0.0",
+    "npm": ">=3.0.0"
   },
   "bugs": {
     "url": "https://github.com/libp2p/js-peer-id/issues"
   },
   "homepage": "https://github.com/libp2p/js-peer-id",
   "devDependencies": {
-    "aegir": "^9.2.1",
+    "aegir": "^10.0.0",
     "chai": "^3.5.0",
-    "pre-commit": "^1.1.3"
+    "pre-commit": "^1.2.2"
   },
   "dependencies": {
-    "async": "^2.0.1",
-    "libp2p-crypto": "^0.7.0",
-    "multihashes": "^0.3.0"
+    "libp2p-crypto": "~0.8.0",
+    "multihashes": "~0.3.3",
+    "async": "^2.1.4"
   },
   "repository": {
     "type": "git",
