--- a/package.json
+++ b/package.json
@@ -34,14 +34,15 @@
   },
   "homepage": "https://github.com/libp2p/js-peer-id",
   "devDependencies": {
-    "aegir": "^10.0.0",
+    "aegir": "^11.0.0",
     "chai": "^3.5.0",
+    "dirty-chai": "^1.2.2",
     "pre-commit": "^1.2.2"
   },
   "dependencies": {
-    "libp2p-crypto": "~0.8.0",
-    "multihashes": "~0.3.3",
-    "async": "^2.1.4"
+    "libp2p-crypto": "~0.8.6",
+    "multihashes": "~0.4.4",
+    "async": "^2.1.5"
   },
   "repository": {
     "type": "git",
