--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,7 @@ build
 # https://www.npmjs.org/doc/misc/npm-faq.html#should-i-check-my-node_modules-folder-into-git
 node_modules
 
+docs
 lib
 dist
 test/test-data/go-ipfs-repo/LOCK
@@ -40,3 +41,4 @@ test/test-data/go-ipfs-repo/LOG.old
 
 # while testing npm5
 package-lock.json
+yarn.lock
