--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "async": "^2.6.0",
     "libp2p-crypto": "~0.11.0",
     "lodash": "^4.17.4",
-    "multihashes": "~0.4.12"
+    "multihashes": "~0.4.12",
+    "callback.flow": "1.0.0"
   },
   "repository": {
     "type": "git",
