chore: remove pre-commit module

--- a/package.json
+++ b/package.json
@@ -35,8 +35,7 @@
   "devDependencies": {
     "aegir": "^13.1.0",
     "chai": "^4.1.2",
-    "dirty-chai": "^2.0.1",
-    "pre-commit": "^1.2.2"
+    "dirty-chai": "^2.0.1"
   },
   "dependencies": {
     "async": "^2.6.0",
