--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
   "dependencies": {
     "async": "^2.6.1",
     "class-is": "^1.1.0",
-    "libp2p-crypto": "libp2p/js-libp2p-crypto#feat/bundle-size",
+    "libp2p-crypto": "~0.16.0",
     "multihashes": "~0.4.13"
   },
   "repository": {
