--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "dirty-chai": "^2.0.1"
   },
   "dependencies": {
+    "cids": "~0.7.1",
     "class-is": "^1.1.0",
     "libp2p-crypto": "~0.17.0",
     "multihashes": "~0.4.15",
