--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "IPFS Peer Id implementation in Node.js",
   "leadMaintainer": "Vasco Santos <santos.vasco10@gmail.com>",
   "main": "src/index.js",
+  "types": "src/index.d.ts",
   "bin": "src/bin.js",
   "scripts": {
     "lint": "aegir lint",
@@ -11,6 +12,7 @@
     "test": "aegir test",
     "test:node": "aegir test -t node",
     "test:browser": "aegir test -t browser -t webworker",
+    "test:types": "npx tsc",
     "release": "aegir release",
     "release-minor": "aegir release --type minor",
     "release-major": "aegir release --type major",
@@ -34,15 +36,18 @@
   },
   "homepage": "https://github.com/libp2p/js-peer-id",
   "devDependencies": {
+    "@types/chai": "^4.2.7",
+    "@types/dirty-chai": "^2.0.2",
+    "@types/mocha": "^5.2.7",
     "aegir": "^20.0.0",
     "bundlesize": "~0.18.0",
     "chai": "^4.2.0",
     "dirty-chai": "^2.0.1"
   },
   "dependencies": {
-    "cids": "~0.7.1",
+    "cids": "^0.7.3",
     "class-is": "^1.1.0",
-    "libp2p-crypto": "~0.17.0",
+    "libp2p-crypto": "~0.17.2",
     "multihashes": "~0.4.15",
     "protons": "^1.0.1"
   },
