chore: update contributors

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "peer-id",
-  "version": "0.13.9",
+  "version": "0.13.10",
   "description": "IPFS Peer Id implementation in Node.js",
   "leadMaintainer": "Vasco Santos <santos.vasco10@gmail.com>",
   "main": "src/index.js",
@@ -57,33 +57,29 @@
     "url": "https://github.com/libp2p/js-peer-id.git"
   },
   "contributors": [
-    "Alex Potsides <alex@achingbrain.net>",
+    "David Dias <daviddias.p@gmail.com>",
+    "Vasco Santos <vasco.santos@moxy.studio>",
+    "nginnever <ginneversource@gmail.com>",
+    "dignifiedquire <dignifiedquire@gmail.com>",
+    "Jacob Heun <jacobheun@gmail.com>",
+    "Pedro Teixeira <i@pgte.me>",
+    "Stephen Whitmore <stephen.whitmore@gmail.com>",
+    "Maciej Krüger <mkg20001@gmail.com>",
+    "Hugo Dias <hugomrdias@gmail.com>",
+    "Nate Foss <npfoss@gmail.com>",
+    "Robert Kiel <robert.kiel@validitylabs.org>",
+    "ᴠɪᴄᴛᴏʀ ʙᴊᴇʟᴋʜᴏʟᴍ <victorbjelkholm@gmail.com>",
     "Arve Knudsen <arve.knudsen@gmail.com>",
     "Carson Farmer <carson.farmer@gmail.com>",
     "Christian Paul <info@jaller.de>",
-    "David Dias <daviddias.p@gmail.com>",
-    "David Dias <mail@daviddias.me>",
-    "Friedel Ziegelmayer <dignifiedquire@gmail.com>",
     "Henrique Dias <hacdias@gmail.com>",
-    "Hugo Dias <hugomrdias@gmail.com>",
-    "Jacob Heun <jacobheun@gmail.com>",
-    "Maciej Krüger <mkg20001@gmail.com>",
     "Marcin Rataj <lidel@lidel.org>",
     "Michael Garvin <gar+gh@danger.computer>",
-    "Nate Foss <npfoss@gmail.com>",
-    "Pedro Teixeira <i@pgte.me>",
     "Prashanth Chandra <coolshanth94@gmail.com>",
     "Richard Littauer <richard.littauer@gmail.com>",
     "Richard Schneider <makaretu@gmail.com>",
-    "Robert Kiel <robert.kiel@validitylabs.org>",
-    "Stephen Whitmore <stephen.whitmore@gmail.com>",
     "Topper Bowers <topper@quorumcontrol.com>",
-    "Vasco Santos <vasco.santos@moxy.studio>",
-    "Vasco Santos <vasco.santos@ua.pt>",
     "Yahya <ya7yaz@gmail.com>",
-    "greenkeeperio-bot <support@greenkeeper.io>",
-    "nginnever <ginneversource@gmail.com>",
-    "npmcdn-to-unpkg-bot <npmcdn-to-unpkg-bot@users.noreply.github.com>",
-    "ᴠɪᴄᴛᴏʀ ʙᴊᴇʟᴋʜᴏʟᴍ <victorbjelkholm@gmail.com>"
+    "Alex Potsides <alex@achingbrain.net>"
   ]
 }
