--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "cids": "^0.8.0",
     "class-is": "^1.1.0",
     "libp2p-crypto": "~0.17.3",
+    "minimist": "^1.2.5",
     "multihashes": "~0.4.15",
     "protons": "^1.0.2"
   },
