--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "peer-id",
-  "version": "0.13.12",
+  "version": "0.13.13",
   "description": "IPFS Peer Id implementation in Node.js",
   "leadMaintainer": "Vasco Santos <santos.vasco10@gmail.com>",
   "main": "src/index.js",
@@ -65,22 +65,22 @@
     "Jacob Heun <jacobheun@gmail.com>",
     "Pedro Teixeira <i@pgte.me>",
     "Stephen Whitmore <stephen.whitmore@gmail.com>",
-    "Maciej Krüger <mkg20001@gmail.com>",
     "Hugo Dias <hugomrdias@gmail.com>",
+    "Maciej Krüger <mkg20001@gmail.com>",
+    "Alex Potsides <alex@achingbrain.net>",
     "Nate Foss <npfoss@gmail.com>",
     "Robert Kiel <robert.kiel@validitylabs.org>",
-    "ᴠɪᴄᴛᴏʀ ʙᴊᴇʟᴋʜᴏʟᴍ <victorbjelkholm@gmail.com>",
-    "Arve Knudsen <arve.knudsen@gmail.com>",
-    "Carson Farmer <carson.farmer@gmail.com>",
-    "Christian Paul <info@jaller.de>",
-    "Henrique Dias <hacdias@gmail.com>",
-    "Marcin Rataj <lidel@lidel.org>",
     "Michael Garvin <gar+gh@danger.computer>",
-    "Prashanth Chandra <coolshanth94@gmail.com>",
     "Richard Littauer <richard.littauer@gmail.com>",
     "Richard Schneider <makaretu@gmail.com>",
+    "ᴠɪᴄᴛᴏʀ ʙᴊᴇʟᴋʜᴏʟᴍ <victorbjelkholm@gmail.com>",
+    "Marcin Rataj <lidel@lidel.org>",
     "Topper Bowers <topper@quorumcontrol.com>",
+    "Henrique Dias <hacdias@gmail.com>",
     "Yahya <ya7yaz@gmail.com>",
-    "Alex Potsides <alex@achingbrain.net>"
+    "Christian Paul <info@jaller.de>",
+    "Carson Farmer <carson.farmer@gmail.com>",
+    "Arve Knudsen <arve.knudsen@gmail.com>",
+    "Prashanth Chandra <coolshanth94@gmail.com>"
   ]
 }
