chore: update contributors

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "peer-id",
-  "version": "0.14.0",
+  "version": "0.14.1",
   "description": "IPFS Peer Id implementation in Node.js",
   "leadMaintainer": "Vasco Santos <santos.vasco10@gmail.com>",
   "main": "src/index.js",
@@ -65,19 +65,21 @@
     "Hugo Dias <hugomrdias@gmail.com>",
     "Maciej Krüger <mkg20001@gmail.com>",
     "Alex Potsides <alex@achingbrain.net>",
-    "Robert Kiel <robert.kiel@validitylabs.org>",
     "Nate Foss <npfoss@gmail.com>",
+    "Robert Kiel <robert.kiel@validitylabs.org>",
     "ᴠɪᴄᴛᴏʀ ʙᴊᴇʟᴋʜᴏʟᴍ <victorbjelkholm@gmail.com>",
+    "Arve Knudsen <arve.knudsen@gmail.com>",
+    "Carson Farmer <carson.farmer@gmail.com>",
+    "Christian Paul <info@jaller.de>",
+    "Henrique Dias <hacdias@gmail.com>",
+    "Marcin Rataj <lidel@lidel.org>",
+    "Michael Garvin <gar+gh@danger.computer>",
+    "Prashanth Chandra <coolshanth94@gmail.com>",
     "Richard Littauer <richard.littauer@gmail.com>",
     "Richard Schneider <makaretu@gmail.com>",
-    "Marcin Rataj <lidel@lidel.org>",
     "Topper Bowers <topper@quorumcontrol.com>",
-    "Henrique Dias <hacdias@gmail.com>",
+    "Vojtech Simetka <vojtech@simetka.cz>",
     "Yahya <ya7yaz@gmail.com>",
-    "Christian Paul <info@jaller.de>",
-    "Carson Farmer <carson.farmer@gmail.com>",
-    "Arve Knudsen <arve.knudsen@gmail.com>",
-    "Michael Garvin <gar+gh@danger.computer>",
-    "Prashanth Chandra <coolshanth94@gmail.com>"
+    "Adam Uhlíř <adam@uhlir.dev>"
   ]
 }
