--- a/tsconfig.json
+++ b/tsconfig.json
@@ -33,5 +33,8 @@
     ],
     "include": [
         "./test/**/*.spec.js"
+    ],
+    "exclude": [
+        "src/proto.js" // generated file
     ]
 }
