--- a/package.json
+++ b/package.json
@@ -41,14 +41,14 @@
     "@types/dirty-chai": "^2.0.2",
     "@types/mocha": "^8.2.0",
     "aegir": "^33.0.0",
+    "multihashes": "^4.0.2",
     "util": "^0.12.3"
   },
   "dependencies": {
-    "cids": "^1.1.5",
     "class-is": "^1.1.0",
     "libp2p-crypto": "^0.19.0",
     "minimist": "^1.2.5",
-    "multihashes": "^4.0.2",
+    "multiformats": "^9.0.0",
     "protobufjs": "^6.10.2",
     "uint8arrays": "^2.0.5"
   },
