:arrow_up: Update aegir dependency

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "bin": "src/bin.js",
   "scripts": {
     "lint": "aegir lint",
-    "build": "npm run build:proto && npm run build:proto-types && aegir build --no-types",
+    "build": "npm run build:proto && npm run build:proto-types && aegir build",
     "build:proto": "pbjs -t static-module -w commonjs -r libp2p-peer-id --force-number --no-verify --no-delimited --no-create --no-beautify --no-defaults --lint eslint-disable -o src/proto.js ./src/proto.proto",
     "build:proto-types": "pbts -o src/proto.d.ts src/proto.js",
     "test": "aegir test",
@@ -40,7 +40,7 @@
     "@types/chai": "^4.2.14",
     "@types/dirty-chai": "^2.0.2",
     "@types/mocha": "^8.2.0",
-    "aegir": "^33.0.0",
+    "aegir": "^33.2.0",
     "util": "^0.12.3"
   },
   "dependencies": {
