--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,38 +1,18 @@
 {
+    "extends": "aegir/src/config/tsconfig.aegir.json",
     "compilerOptions": {
-        "module": "commonjs",
-        "lib": [
-            "es6"
-        ],
-        "target": "ES5",
-        "noImplicitAny": false,
-        "noImplicitThis": true,
-        "strictFunctionTypes": true,
-        "strictNullChecks": true,
-        "esModuleInterop": true,
-        "resolveJsonModule": true,
-        "allowJs": true,
-        "checkJs": true,
-        "baseUrl": ".",
+        "outDir": "dist",
+        "baseUrl": "./",
         "paths": {
-            "peer-id": [
-                "./src",
-                "../src",
+            "*": [
+                "./types/*"
             ]
-        },
-        "types": [
-            "node",
-            "mocha",
-            "chai"
-        ],
-        "noEmit": true,
-        "forceConsistentCasingInFileNames": true
+        }
     },
-    "files": [
-        "./src/index.d.ts",
-    ],
     "include": [
-        "./test/**/*.spec.js"
+        "types",
+        "test",
+        "src"
     ],
     "exclude": [
         "src/proto.js" // generated file
