--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "bin": "src/bin.js",
   "scripts": {
     "lint": "aegir lint",
+    "prepare": "npm run build",
     "build": "npm run build:proto && npm run build:proto-types && aegir build --no-types",
     "build:proto": "pbjs -t static-module -w commonjs -r libp2p-peer-id --force-number --no-verify --no-delimited --no-create --no-beautify --no-defaults --lint eslint-disable -o src/proto.js ./src/proto.proto",
     "build:proto-types": "pbts -o src/proto.d.ts src/proto.js",
@@ -41,14 +42,14 @@
     "@types/dirty-chai": "^2.0.2",
     "@types/mocha": "^8.2.0",
     "aegir": "^33.0.0",
+    "multihashes": "^4.0.2",
     "util": "^0.12.3"
   },
   "dependencies": {
-    "cids": "^1.1.5",
     "class-is": "^1.1.0",
     "libp2p-crypto": "^0.19.0",
     "minimist": "^1.2.5",
-    "multihashes": "^4.0.2",
+    "multiformats": "^9.0.0",
     "protobufjs": "^6.10.2",
     "uint8arrays": "^2.0.5"
   },
