chore: update contributors

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "peer-id",
-  "version": "0.14.8",
+  "version": "0.15.0",
   "description": "IPFS Peer Id implementation in Node.js",
   "leadMaintainer": "Vasco Santos <santos.vasco10@gmail.com>",
   "main": "src/index.js",
@@ -84,6 +84,7 @@
     "Topper Bowers <topper@quorumcontrol.com>",
     "Vojtech Simetka <vojtech@simetka.cz>",
     "Yahya <ya7yaz@gmail.com>",
-    "a1300 <matthias-knopp@gmx.net>"
+    "a1300 <matthias-knopp@gmx.net>",
+    "acolytec3 <17355484+acolytec3@users.noreply.github.com>"
   ]
 }
