--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,40 +1,12 @@
 {
-    "compilerOptions": {
-        "module": "commonjs",
-        "lib": [
-            "es6"
-        ],
-        "target": "ES5",
-        "noImplicitAny": false,
-        "noImplicitThis": true,
-        "strictFunctionTypes": true,
-        "strictNullChecks": true,
-        "esModuleInterop": true,
-        "resolveJsonModule": true,
-        "allowJs": true,
-        "checkJs": true,
-        "baseUrl": ".",
-        "paths": {
-            "peer-id": [
-                "./src",
-                "../src",
-            ]
-        },
-        "types": [
-            "node",
-            "mocha",
-            "chai"
-        ],
-        "noEmit": true,
-        "forceConsistentCasingInFileNames": true
-    },
-    "files": [
-        "./src/index.d.ts",
-    ],
-    "include": [
-        "./test/**/*.spec.js"
-    ],
-    "exclude": [
-        "src/proto.js" // generated file
-    ]
+  "extends": "aegir/src/config/tsconfig.aegir.json",
+  "compilerOptions": {
+    "outDir": "dist"
+  },
+  "include": [
+    "./test/**/*.spec.js"
+  ],
+  "exclude": [
+    "src/proto.js" // generated file
+  ]
 }
