--- a/package.json
+++ b/package.json
@@ -41,21 +41,26 @@
     "@types/chai": "^4.2.14",
     "@types/dirty-chai": "^2.0.2",
     "@types/mocha": "^8.2.0",
-    "aegir": "^33.0.0",
-    "multihashes": "^4.0.2",
+    "aegir": "^34.0.2",
     "util": "^0.12.3"
   },
   "dependencies": {
     "class-is": "^1.1.0",
     "libp2p-crypto": "^0.19.0",
     "minimist": "^1.2.5",
-    "multiformats": "^9.0.0",
+    "multiformats": "^9.3.0",
     "protobufjs": "^6.10.2",
     "uint8arrays": "^2.0.5"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/libp2p/js-peer-id.git"
+  },
+  "eslintConfig": {
+    "extends": "ipfs",
+    "ignorePatterns": [
+      "proto.d.ts"
+    ]
   },
   "contributors": [
     "David Dias <daviddias.p@gmail.com>",
