chore: update contributors

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "peer-id",
-  "version": "0.15.4",
+  "version": "0.16.0",
   "description": "IPFS Peer Id implementation in Node.js",
   "leadMaintainer": "Vasco Santos <santos.vasco10@gmail.com>",
   "main": "src/index.js",
@@ -62,15 +62,14 @@
     "Vasco Santos <vasco.santos@moxy.studio>",
     "nginnever <ginneversource@gmail.com>",
     "dignifiedquire <dignifiedquire@gmail.com>",
-    "Jacob Heun <jacobheun@gmail.com>",
     "Alex Potsides <alex@achingbrain.net>",
+    "Jacob Heun <jacobheun@gmail.com>",
     "Pedro Teixeira <i@pgte.me>",
     "Stephen Whitmore <stephen.whitmore@gmail.com>",
     "Hugo Dias <hugomrdias@gmail.com>",
     "Maciej Krüger <mkg20001@gmail.com>",
-    "Robert Kiel <robert.kiel@validitylabs.org>",
     "Nate Foss <npfoss@gmail.com>",
-    "acolytec3 <17355484+acolytec3@users.noreply.github.com>",
+    "Robert Kiel <robert.kiel@validitylabs.org>",
     "Adam Uhlíř <adam@uhlir.dev>",
     "ᴠɪᴄᴛᴏʀ ʙᴊᴇʟᴋʜᴏʟᴍ <victorbjelkholm@gmail.com>",
     "Arve Knudsen <arve.knudsen@gmail.com>",
@@ -86,6 +85,7 @@
     "Topper Bowers <topper@quorumcontrol.com>",
     "Vojtech Simetka <vojtech@simetka.cz>",
     "Yahya <ya7yaz@gmail.com>",
-    "a1300 <matthias-knopp@gmx.net>"
+    "a1300 <matthias-knopp@gmx.net>",
+    "acolytec3 <17355484+acolytec3@users.noreply.github.com>"
   ]
 }
